# figtree

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.opencode/plans/: cuda-attention-kernel.md  e3-enumerated-generation.md  figtree-maturation.md  fix-everything-v2.md  fix-fact-injection.md  fix-recall-and-docs.md  lancedb-migration.md  per-layer-boundary-projection.md  recall-accuracy.md  recall-root-cause.md
examples/: davos_benchmark.py  davos_benchmark_v2.py  davos_compare.py  davos_eval.py  davos_shell.py  davos_shell_v2.py  library_usage.py  rag_baseline_davos.py  run_apollo_demo.py  run_davos_demo.py  run_davos_v2.py  run_demo.py
examples/conflicting_news/: article_a.txt  article_b.txt
examples/davos_narratives/: anti_globalist.txt  conspiracy.txt  pro_globalist.txt
figtree/: __init__.py  cli.py  figment.py  generate.py  graph.py  ingest.py  kv_cache_manager.py  lancedb_store.py  model.py  recall.py  summarize.py
figtree/kernel/: __init__.py  boundary_project.py  build.py
pdga/: __init__.py
pdga/apollo/: __init__.py  boundary_kv.py  compressed.py  engine.py  kernels.py
pdga/cli/: main.py
pdga/db/: schema.py  store.py
pdga/delta/: base.py  cache_io.py  context.py  io.py
pdga/fact/: __init__.py  generate.py  graph.py  ingest.py  primitive.py
pdga/generation/: __init__.py  boundary_kv.py  compressed.py  engine.py  kernels.py  retrieval.py  streaming.py
pdga/graph/: auto_edges.py  dedup.py  edges.py  trust.py
pdga/ingest/: extractor.py  facts.py  gliner_extractor.py  sparse.py  text.py
pdga/kernel/: __init__.py  apollo_cuda.py  apollo_engine.py  boundary_project.cu  boundary_project.py  build.py  corrected.py  cuda_inject.py  cuda_inject_cpp.py  forward.py  gather.py  hooks.py  inject.py  multi.py  prompt.py  reference.py  residual_inject.py  stream.py
pdga/retrieval/: lsh.py
tests/: test_apollo_comprehensive.py  test_apollo_engine.py  test_boundary_kv.py  test_compressed_path.py  test_engine.py  test_enumerated.py  test_generation_comprehensive.py  test_hierarchy.py  test_recall.py  test_store.py  test_trust.py  test_v2_pipeline.py
