[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdga"
version = "0.1.0"
description = "Parallel Delta Graph Architecture — context-aware multi-delta generation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "numpy>=1.24",
    "safetensors>=0.4",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "networkx>=3.0",
]

[project.scripts]
pdga = "pdga.cli.main:app"

[tool.setuptools.packages.find]
include = ["pdga*"]
