[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figtree"
version = "0.2.0"
description = "Figtree — grow coherent Images from Figments"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "numpy>=1.24",
    "safetensors>=0.4",
    "typer>=0.9",
    "rich>=13.0",
    "lancedb>=0.15",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "networkx>=3.0",
    "ruff>=0.4",
]
storage = [
    "lancedb>=0.15",
    "pyarrow>=14.0",
]

[tool.setuptools.packages.find]
include = ["figtree*"]
